# HelloJNI

./: .gitignore  CMakeLists.txt  choose_jdk.adoc  com_whalefall_learncases_callc_HelloJNI.c  readme.adoc
